tests/paczka1/fuzzy1/71909655.err
Error in line 19: A80 A80 51,21
Error in line 20: 1Cj3 A80 95,3
Error in line 29: A80 A80 32,Q
Error in line 21: A80 A888 4,6
